# chess-engine

./: .gitignore  README.md  log.txt  output.json  package-lock.json  requirements.txt
Base/: interface.py  minimax_bot.py  opening.py
CONVERTER/: input.txt  main.py  output.txt
Engine/: log.txt  main.cpp
Engine/includes/: bot.cpp  bot.h  bothelpers.cpp  constructors.cpp  evaluate.cpp  findmove.cpp  helpers.cpp  nnue_eval.cpp  openings.cpp  search.cpp  ucibot.cpp
Initial Experiments/: interface.py  minimax_bot.py  minimax_bot_multi.py  opening.py
Initial Experiments/OpeningBook/: book.json
Initial Experiments/v1/: minimax_bot.py
Initial Experiments/v4/: interface.py  minimax_bot.py  minimax_bot_multi.py
Match Manager/: log.txt  main.py
Match Manager - C++/: CMakeLists.txt  Steps.txt  log.txt  main.cpp
Previous Versions/v4/: perft.py  (+2 more)
Previous Versions/v7.4/: CMakeLists.txt  main.cpp
Previous Versions/v7.4/includes/: bot.h
docs/: SprintLogs.md  index.md
fastchess-windows-latest/: OUT.pgn  cmd.txt  config.json  log.txt
v2/: minimax_bot.py
v3/: minimax_bot.py
v4/: interface.py  minimax_bot.cp311-win_amd64.pyd  minimax_bot_test.py  profile_cython.prof  testing.py
v5/: chess.c  chess.pyx  testing.py
v5.1/: CMakeLists.txt  main.cpp  setup.py  steps.txt  testing.py
v5.2/: main.cpp  steps.txt
v6.1/: main.cpp
v6.2/: credits.txt
v7.2/: log.txt  main.cpp
v7.3/: credits.txt  engine.cpp  log.txt
v7.4/: log.txt  main.cpp
v7.5/: log.txt  steps.txt  v1.txt
v8/: log.txt
v8.1/: log.txt  main.cpp
v8.1-a/: log.txt  main.cpp  steps.txt
(+95 files in other folders)
